--- a/fastdfs/dockerbuild/nginx.conf
+++ b/fastdfs/dockerbuild/nginx.conf
@@ -11,9 +11,32 @@ http {
         server_name _;
         access_log /dev/null;
         error_log /dev/stderr info;
-
-        location ~ /group[0-9]/M00 {
+		
+		location ~ group1/M00/(.+)_([0-9]+)x([0-9]+)\.(jpg|gif|png|jpeg) {
             ngx_fastdfs_module;
+            set $w $2;
+            set $h $3;
+
+            if ($w != "0") {
+                rewrite group1/M00(.+)_(\d+)x(\d+)\.(jpg|gif|png|jpeg)$ group1/M00$1.$4 break;
+            }
+
+            if ($h != "0") {
+                rewrite group1/M00(.+)_(\d+)x(\d+)\.(jpg|gif|png|jpeg)$ group1/M00$1.$4 break;
+            }
+
+            #根据给定的长宽生成缩略图   
+            image_filter resize $w $h;
+
+            #原图最大2M，要裁剪的图片超过2M返回415错误，需要调节参数image_filter_buffer  
+            image_filter_buffer 10M;
+
+            #try_files group1/M00$1.$4 $1.jpg;
+        }
+
+
+        location ~ group1/M00/(.+)\.?(.+){
+              ngx_fastdfs_module;
         }
     }
 }
