--- a/fastdfs/dockerbuild/Dockerfile
+++ b/fastdfs/dockerbuild/Dockerfile
@@ -28,6 +28,8 @@ ADD *.tar.gz *.sh ${WORK}/
 #         && tar zxf nginx-module.tar.gz
 
 # 安装fdfs
+RUN     cd ${WORK} \
+		&& tar zxf fastfs-5.11.tar.gz
 RUN     cd ${WORK}/libfastcommon-1.0.36/ \
         && ./make.sh \
         && ./make.sh install \
