更新storage的默认配置max_connections参数

--- a/fastdfs/dockerbuild/Dockerfile
+++ b/fastdfs/dockerbuild/Dockerfile
@@ -29,7 +29,7 @@ ADD *.tar.gz *.sh ${WORK}/
 
 # 安装fdfs
 RUN     cd ${WORK} \
-		&& tar zxf fastfs-5.11.tar.gz
+		&& tar zxf fastdfs-5.11.tar.gz
 RUN     cd ${WORK}/libfastcommon-1.0.36/ \
         && ./make.sh \
         && ./make.sh install \
