--- a/fastdfs/dockerbuild/nginx.conf
+++ b/fastdfs/dockerbuild/nginx.conf
@@ -12,7 +12,7 @@ http {
         access_log /dev/null;
         error_log /dev/stderr info;
 		
-		location ~ group1/M00/(.+)_([0-9]+)x([0-9]+)\.(jpg|gif|png|jpeg) {
+            location ~ group[0-9]/M00/(.+)_([0-9]+)x([0-9]+)\.(jpg|gif|png|jpeg) {
             ngx_fastdfs_module;
             set $w $2;
             set $h $3;
@@ -35,7 +35,7 @@ http {
         }
 
 
-        location ~ group1/M00/(.+)\.?(.+){
+        location ~ group[0-9]/M00/(.+)\.?(.+){
               ngx_fastdfs_module;
         }
     }
